CKAD/10-implementing-NetworkPolicy/app-stack-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: app-stack-network-policy
 namespace: app-stack
spec:
 podSelector: 
  matchLabels:
   app: todo
   tier: database
 policyTypes:
 - Ingress
 - Egress
 ingress:
 - from:
   - podSelector:
      matchLabels:
       app: todo
       tier: backend
   ports:
   - protocol: TCP
     port: 3306
